plugins {
    id "java"
    id "org.springframework.boot" version "3.5.3"
    id "io.spring.dependency-management" version "1.1.7"
}

java {
    toolchain {
        // Examples track the newest Java release; -PjavaVersion overrides.
        languageVersion = JavaLanguageVersion.of(
                providers.gradleProperty("javaVersion").getOrElse("26"))
    }
}

// Spring's ASM cannot parse the newest class files yet; runtime stays newest.
tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "io.superdurable:dex-sdk:0.2.1"

    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.fasterxml.jackson.core:jackson-annotations"
    implementation "com.fasterxml.jackson.core:jackson-core"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.junit.jupiter:junit-jupiter"
}

tasks.named("test") {
    useJUnitPlatform()
    // Integ tests share one Worker via SharedIntegExtension.
    maxParallelForks = 1
}
